test/syn-err/DeclVars2.tpc
int main(void){
    int a,b;

    if (a == b){
        int a,b; // error
        a = 1;
        b = 2;
    } else {
        a = 2;
    }
}